Plantilla de Rento Ejercicio de practica

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Plantilla de practica EJ.1</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
             </ul>
         </nav>
     </header>
-
+<!-- SECTION 1 -->
     <main>
         <section class="banner">
             <h1 class="banner-title">Find best car Here For rent</h1>
@@ -32,8 +33,117 @@
             <p class="banner-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio labore necessitatibus ab saepe tenetur error laboriosam aliquid dolorem quo doloremque. Quae eius nostrum est minus temporibus quo maxime labore voluptatem.</p>
             <a href="" class="banner-a">Read More</a>
         </section>
-    </main>
-    
-    <footer></footer>
+<!-- SECTION 2 CARS -->
+        <section class="car">
+            <h2 class="car-title">Variety of cars</h2>
+            <span class="car-span">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui odio repellat commodi</span>
+
+            <div class="car-div">
+                <figure class="car-box">
+                    <img src="img/car_img1.png" alt="" class="car-box-img">
+                </figure>
+                <h3 class="car-box-title">Hundai</h3>
+            </div>
+
+            <div class="car-div">
+                <figure class="car-box">
+                    <img src="img/car_img2.png" alt="" class="car-box-img">
+                </figure>
+                <h3 class="car-box-title">Audi</h3>
+            </div>
+
+            <div class="car-div">
+                <figure class="car-box">
+                    <img src="img/car_img3.png" alt="" class="car-box-img">
+                </figure>
+                <h3 class="car-box-title">BMW X5</h3>
+            </div>
+        </section>
+<!-- SECTION 3 BEST CARS -->
+        <section class="best-car">
+            <form action="" class="main-form">
+                <h2 class="best-car-title">Find A Best Car For Rent</h2>
+
+
+                <select name="" id="">
+                    <option value="0">Choose Car Make</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+                
+                <select name="car-make" id="" class="car-make">
+                    <option value="0" class="car-choose">Choose car Make</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+
+
+                <select name="" id="">
+                    <option value="0">Choose Car Type</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+
+                <select name="car-make" id="" class="car-make">
+                    <option value="0" class="car-choose">Choose Car Type</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+
+                <input class="search" type="search" placeholder="Search" name="Search">
+
+                <select name="" id="">
+                    <option value="0">Price of Rent</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+                <select name="car-make" id="" class="car-make">
+                    <option value="0" class="car-choose">Price of Rent</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+
+                <button class="search-now">Find Now</button>
+            </form>
+        </section>
+        <!-- SECTION 4 WHY CHOOSE US -->
+        <section class="why-choose-us">
+            <h2 class="choose-title">Why choose us</h2>
+            <span class="choose-span-title">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point fo using</span>
+
+            <span class="choose-number">1</span>
+            <p class="choose-p">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making</p>
+            <span class="choose-number">2</span>
+            <p class="choose-p">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making</p>
+            <span class="choose-number">3</span>
+            <p class="choose-p">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making</p>
+        </section>
+
+        <section class="customer">
+            <h2 class="customer-title">What is says our customer</h2>
+            <figure class="customer-box"><img src="img/cross_img.png" alt="" class="customer-img"></figure>
+
+            <div class="customer-div">
+                    <h4 class="customer-title-h4">Due markes</h4>
+                    <span class="customer-span">Rental</span>
+                    <p class="customer-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi repudiandae quia cumque ab consectetur dicta atque repellat aliquam, ut nulla, labore iste facilis autem illum earum, molestiae natus. Eligendi, impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <figure class="customer-box"><img src="img/te1.png" alt="" class="customer-tild"></figure>
+                </div>
+            </section>
+        </main>
+
+    <footer class="footer">
+        <div class="contact">
+            <h3 class="number"><strong class="call-now">Call Now </strong>(+1) 12345667890</h3>
+            <h3 class="responsive-landing"><strong class="footer-multipurpose">Free Multipurpose</strong> Responsive Landing Page 2019</h3>
+        </div>
+        <p class="footer-p">© 2019 All Rights Reserved. Design by Free Html Templates</p>
+    </footer>
 </body>
 </html>
